netcdf.h

/* These defs added by netCDF configure because parallel HDF5 is not present. */
typedef int nc_type;
EXTERNL int
nc_inq_varid(int ncid, const char *name, int *varidp);
EXTERNL int 
nc_inq_varname(int ncid, int varid, char *name);
EXTERNL int 
nc_inq_vartype(int ncid, int varid, nc_type *xtypep);
EXTERNL int 
nc_inq_varndims(int ncid, int varid, int *ndimsp);
EXTERNL int 
nc_inq_vardimid(int ncid, int varid, int *dimidsp);
EXTERNL int 
nc_inq_varnatts(int ncid, int varid, int *nattsp);
EXTERNL int
nc_rename_var(int ncid, int varid, const char *name);
/* End _var */
/* Begin {put,get}_var1 */

EXTERNL int
nc_put_var1_text(int ncid, int varid, const size_t *indexp, const char *op);
EXTERNL int
nc_get_var1_text(int ncid, int varid, const size_t *indexp, char *ip);
EXTERNL int
nc_put_var1_uchar(int ncid, int varid, const size_t *indexp,
		  const unsigned char *op);
EXTERNL int
nc_get_var1_uchar(int ncid, int varid, const size_t *indexp,
		  unsigned char *ip);
EXTERNL int
nc_put_var1_schar(int ncid, int varid, const size_t *indexp,
		  const signed char *op);
EXTERNL int
nc_get_var1_schar(int ncid, int varid, const size_t *indexp,
		  signed char *ip);
EXTERNL int
nc_put_var1_short(int ncid, int varid, const size_t *indexp,
		  const short *op);
EXTERNL int
nc_get_var1_short(int ncid, int varid, const size_t *indexp,
		  short *ip);
EXTERNL int
nc_put_var1_int(int ncid, int varid, const size_t *indexp, const int *op);
EXTERNL int
nc_get_var1_int(int ncid, int varid, const size_t *indexp, int *ip);
EXTERNL int
nc_put_var1_long(int ncid, int varid, const size_t *indexp, const long *op);
EXTERNL int
nc_get_var1_long(int ncid, int varid, const size_t *indexp, long *ip);
EXTERNL int
nc_put_var1_float(int ncid, int varid, const size_t *indexp, const float *op);
EXTERNL int
nc_get_var1_float(int ncid, int varid, const size_t *indexp, float *ip);
EXTERNL int
nc_put_var1_double(int ncid, int varid, const size_t *indexp, const double *op);
EXTERNL int
nc_get_var1_double(int ncid, int varid, const size_t *indexp, double *ip);