win32/NET/netcdf_vb/NetCDF.vb


    ' int nc_inq_varid(int ncid, const char *name, int *varidp);
    Declare Ansi Function nc_inq_varid Lib "netcdf.dll" (ByVal ncid As Int32, _
      ByVal name As String, ByRef varid As Int32) As Int32
    ' int  nc_inq_varname(int ncid, int varid, char *name);
    Declare Ansi Function nc_inq_varname Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, ByVal name As StringBuilder) As Int32
    ' int  nc_inq_vartype(int ncid, int varid, nc_type *xtypep);
    Declare Ansi Function nc_inq_vartype Lib "netcdf.dll" (ByVal ncid As Int32, _
    ByVal varid As Int32, ByRef xtypep As nc_type) As Int32
    ' int  nc_inq_varndims(int ncid, int varid, int *ndimsp);
    Declare Ansi Function nc_inq_varndims Lib "netcdf.dll" (ByVal ncid As Int32, _
   ByVal varid As Int32, ByRef ndimsp As Int32) As Int32
    ' int  nc_inq_vardimid(int ncid, int varid, int *dimidsp);
    Declare Ansi Function nc_inq_vardimid Lib "netcdf.dll" (ByVal ncid As Int32, _
    ByVal varid As Int32, <Out()> ByVal dimidsp() As Integer, ByRef nattsp As Int32) As Int32
    ' int  nc_inq_varnatts(int ncid, int varid, int *nattsp);
    Declare Ansi Function nc_inq_varnatts Lib "netcdf.dll" (ByVal ncid As Int32, _
    ByVal varid As Int32, ByRef nattsp As Int32) As Int32
    ' int nc_rename_var(int ncid, int varid, const char *name);
    Declare Ansi Function nc_rename_var Lib "netcdf.dll" (ByVal ncid As Int32, _
      ByVal varid As Int32, ByVal name As String) As Int32
    '
    'READING AND WRITING ONE VALUE AT A TIME
    '
    ' int nc_put_var1_text(int ncid, int varid, const size_t *indexp, const char *op);
    Declare Ansi Function nc_put_var1_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        ByVal op As String) As Int32
    ' int nc_get_var1_text(int ncid, int varid, const size_t *indexp, char *ip);
    Declare Ansi Function nc_get_var1_text Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        ByVal ip As StringBuilder) As Int32
    ' int nc_put_var1_uchar(int ncid, int varid, const size_t *indexp,
    '	const unsigned char *op);
    Declare Ansi Function nc_put_var1_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_var1_uchar(int ncid, int varid, const size_t *indexp,
    '	unsigned char *ip);
    Declare Ansi Function nc_get_var1_uchar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_var1_schar(int ncid, int varid, const size_t *indexp,
    '	const signed char *op);
    Declare Ansi Function nc_put_var1_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal op() As Byte) As Int32
    ' int nc_get_var1_schar(int ncid, int varid, const size_t *indexp,
    '	signed char *ip);
    Declare Ansi Function nc_get_var1_schar Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal ip() As Byte) As Int32
    ' int nc_put_var1_short(int ncid, int varid, const size_t *indexp,
    '	const short *op);
    Declare Ansi Function nc_put_var1_short Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal op() As Int16) As Int32
    ' int nc_get_var1_short(int ncid, int varid, const size_t *indexp,
    '	short *ip);
    Declare Ansi Function nc_get_var1_short Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
       <[In](), Out()> ByVal ip() As Int16) As Int32
    ' int nc_put_var1_int(int ncid, int varid, const size_t *indexp, const int *op);
    Declare Ansi Function nc_put_var1_int Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_var1_int(int ncid, int varid, const size_t *indexp, int *ip);
    Declare Ansi Function nc_get_var1_int Lib "netcdf.dll" (ByVal ncid As Int32, _
      ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
      <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_var1_long(int ncid, int varid, const size_t *indexp, const long *op);
    Declare Ansi Function nc_put_var1_long Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
       <[In](), Out()> ByVal op() As Int32) As Int32
    ' int nc_get_var1_long(int ncid, int varid, const size_t *indexp, long *ip);
    Declare Ansi Function nc_get_var1_long Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
       <[In](), Out()> ByVal ip() As Int32) As Int32
    ' int nc_put_var1_float(int ncid, int varid, const size_t *indexp, const float *op);
    Declare Ansi Function nc_put_var1_float Lib "netcdf.dll" (ByVal ncid As Int32, _
      ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
      <[In](), Out()> ByVal op() As Single) As Int32
    ' int nc_get_var1_float(int ncid, int varid, const size_t *indexp, float *ip);
    Declare Ansi Function nc_get_var1_float Lib "netcdf.dll" (ByVal ncid As Int32, _
       ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
       <[In](), Out()> ByVal ip() As Single) As Int32
    ' int nc_put_var1_double(int ncid, int varid, const size_t *indexp, const double *op);
    Declare Ansi Function nc_put_var1_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal op() As Double) As Int32
    ' int nc_get_var1_double(int ncid, int varid, const size_t *indexp, double *ip);
    Declare Ansi Function nc_get_var1_double Lib "netcdf.dll" (ByVal ncid As Int32, _
        ByVal varid As Int32, <[In](), Out()> ByVal indexp() As Int32, _
        <[In](), Out()> ByVal ip() As Double) As Int32

    'READING AND WRITING SUBSETS OF ARRAYS, WITH START AND COUNT ARRAYS
